Update spacing for description list, fix for #536

--- a/src/scss/components/_terms.scss
+++ b/src/scss/components/_terms.scss
@@ -22,6 +22,7 @@
     flex: 0 0 30%;
     padding-bottom: $spacing-4;
     margin-bottom: $spacing-4;
+    padding-right: $spacing-2;
 
     &:not(:last-of-type) {
       border-bottom: 1px solid $border-color;
@@ -43,6 +44,7 @@
 
   @include breakpoint(lg) {
     flex: 0 0 70%;
+    padding-left: $spacing-2;
   }
 }
 
